Adicion ultimos cursos

--- a/index.html
+++ b/index.html
@@ -137,6 +137,13 @@
                 </div>
             </div>
             <div class="datos1">
+                <h3>Ultimos cursos finalizados</h3>
+                <div class="formacion1">
+                    <ul>
+                        <li>AWS - AWS Technical Essentials</li>
+                        <li>Platzi - Curso Profesional de Git y Github</li>
+                    </ul>
+                </div>
                 <h3>Otros Cursos Realizados</h3>
                 <div class="formacion1">
                     <h4>Plataforma Udemy</h4>
