--- a/index_en.html
+++ b/index_en.html
@@ -135,6 +135,13 @@
                 </div>
             </div>
             <div class="datos1">
+                <h3>Latest completed courses</h3>
+                <div class="formacion1">
+                    <ul>
+                        <li>AWS - AWS Technical Essentials</li>
+                        <li>Platzi - Professional Course of Git & Github</li>
+                    </ul>
+                </div>
                 <h3>Other Courses</h3>
                 <div class="formacion1">
                     <h4>Platform Udemy</h4>
